<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dots"
    android:fitsSystemWindows="true"
    tools:context=".controllers.activities.MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controllers.activities.MainActivity">

        <!-- Toolbar Import -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Add TabLayout to handle tabs -->
        <android.support.design.widget.TabLayout
            android:id="@+id/activity_main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBackground"
            app:tabIndicatorColor="@color/mainSelectedSection"
            app:tabSelectedTextColor="@color/mainTextHighlight"
            app:tabTextAppearance="@style/TabText"
            app:tabTextColor="@color/mainText" />

        <android.support.v4.view.ViewPager
            android:id="@+id/activity_main_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/activity_main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <!-- 1 | MainActivity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- FrameLayout for our fragments -->
            <FrameLayout
                android:id="@+id/activity_main_fragment_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
    <!-- 2 | NavigationView -->
    <android.support.design.widget.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/backgroundSmoothColor"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_main_nav_header"
        app:itemIconTint="@color/mainText"
        app:itemTextColor="@color/mainText"
        app:menu="@menu/menu_activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>