<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:title="Search">
    </item>
    <item
        android:id="@+id/menu_activity_main_params"
        android:icon="@drawable/more"
        app:showAsAction="ifRoom"
        android:title="Settings">

        <menu>
            <item
                android:id="@+id/menu_activity_main_params_Notification"
                app:showAsAction="never"
                android:title="Notifications"/>
            <item
                android:id="@+id/menu_activity_main_params_help"
                app:showAsAction="never"
                android:title="Help"/>
            <item
                android:id="@+id/menu_activity_main_params_about"
                app:showAsAction="never"
                android:title="About"/>
        </menu>

    </item>

</menu>