...
    <string name="politics_lower">politics</string>
    <string name="sciences_lower">science</string>
    <string name="sports_lower">sports</string>
    <string name="technology_lower">technology</string>

    //Main
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    //Drawer
    <string name="categories_drawer">Catégories :</string>
    <string name="sections_drawer">Sections :</string>

...
