...
        android:hint="@string/date_empty"
        android:longClickable="false"
        android:textColor="@color/textSmoothColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/searchButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editBeginDateTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/mainBackground"
...
        android:layout_alignTop="@id/bar"
        android:layout_marginTop="25dp"
        android:text="@string/enable_notifications"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switchButtonNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_notif_txt"
        android:layout_alignEnd="@id/bar" />

    <TextView
...
